# BillToBoxAgent

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BillToBoxAgent.ccgproj  CLAUDE.alex-vinckier.history.md  CLAUDE.alex-vinckier.md  CLAUDE.md  CONVENTIONS.md  README.md  WORKPLAN.md  billtobox-agent-raspberry-handover.md  config.example.yaml  decisions.md  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_uploaded_at.py
deploy/caddy/: billtobox.Caddyfile
deploy/systemd/: billtobox-agent.service  billtobox-agent.timer  billtobox-dashboard.service
docs/: .gitkeep  python-setup.md  raspberry-pi-setup.md
scripts/: .gitkeep  auth_google.py  auth_ms.py  install-units.sh
src/billtobox_agent/: __init__.py  worker.py
src/billtobox_agent/agent/: __init__.py  loop.py
src/billtobox_agent/billtobox/: __init__.py  send.py
src/billtobox_agent/config/: __init__.py  loader.py  models.py
src/billtobox_agent/data/: __init__.py  database.py  models.py  repositories.py  unit_of_work.py
src/billtobox_agent/drive/: __init__.py  connector.py  folders.py  upload.py
src/billtobox_agent/extraction/: __init__.py  extract.py  period.py
src/billtobox_agent/mail/: __init__.py  base.py  doccle.py  fetch.py  gmail.py  google_auth.py  graph.py  ms_auth.py  outlook.py  prefilter.py  render.py
src/billtobox_agent/monitoring/: __init__.py  logging_config.py
src/billtobox_agent/pipeline/: __init__.py  dedup.py  run.py  status.py  steering.py
src/billtobox_agent/utils/: __init__.py  clock.py  hashing.py  redact.py
src/billtobox_agent/web/: __init__.py  api.py  app.py  dependencies.py  steering.py  views.py
src/billtobox_agent/web/static/: style.css
src/billtobox_agent/web/templates/: _events_table.html  activity.html  base.html  debug.html  exceptions.html  invoice_detail.html  invoices.html  logs.html  runs.html
tests/fixtures/: config_minimal.yaml
tests/integration/: test_agent.py  test_billtobox.py  test_data.py  test_dedup.py  test_drive_folders.py  test_drive_upload.py  test_extraction.py  test_gmail.py  test_migrations.py  test_outlook.py  test_pipeline.py  test_status.py  test_steering.py  test_web.py
tests/unit/: test_config_loader.py  test_config_models.py  test_doccle.py  test_monitoring_logging.py  test_period.py  test_prefilter.py  test_redact.py  test_render.py  test_smoke.py  test_systemd_units.py
tutorials/BillToBox/: BillToBox.html  CLAUDE_BillToBox.md
